# cursor-chronicle

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cursor_chat_viewer.md  cursor_chat_viewer.py  cursor_chronicle.md  cursor_chronicle.py  cursor_data_structure.md  pyproject.toml  search_history.py
cursor_chronicle/: __init__.py  __main__.py  backup.py  backup_formatters.py  cli.py  config.py  export_formatters.py  exporter.py  formatters.py  messages.py  statistics.py  utils.py  viewer.py
scripts/: check_coverage.py  check_file_size.py
search_history/: __init__.py  __main__.py  cli.py  formatters.py  searcher.py
tests/: README.md  conftest.py  test_backup.py  test_backup_formatters.py  test_backup_restore.py  test_cli.py  test_config.py  test_cursor_chronicle.py  test_cursor_paths.py  test_exporter.py  test_exporter_export.py  test_exporter_format.py  test_exporter_sanitize.py  test_exporter_verbosity.py  test_formatters.py  test_integration.py  test_messages.py  test_search_cli.py  test_search_core.py  test_search_formatters.py  test_search_history.py  test_search_methods.py  test_statistics.py  test_utils_paths.py  test_viewer.py
