[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cursor-chronicle"
version = "1.5.0"
description = "Extracts and displays dialogs from Cursor IDE database with support for attached files"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Cursor Chronicle Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Text Processing :: General",
]
keywords = ["cursor", "ide", "chat", "database", "viewer"]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/cursor-chronicle/cursor-chronicle"
Repository = "https://github.com/cursor-chronicle/cursor-chronicle"
Issues = "https://github.com/cursor-chronicle/cursor-chronicle/issues"

[project.scripts]
cursor-chronicle = "cursor_chronicle:main"
search-history = "search_history:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["cursor_chronicle", "search_history"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["cursor_chronicle"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=cursor_chronicle --cov=search_history --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["cursor_chronicle", "search_history"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
] 